register bg changed

--- a/frontend/loginForm/css/register.css
+++ b/frontend/loginForm/css/register.css
@@ -1,6 +1,7 @@
 /* register.css */
 body {
     background-color: #aa9c9a;
+    background-image: url('bgimage.jpg');
     font-family: 'Arial', sans-serif;
 }
 
